--- a/CV.html
+++ b/CV.html
@@ -29,31 +29,32 @@
             <div class="column">
                 <h2>Langues</h2>
                 <div id="drapeaux">
-                    <img src="Image-brief-3/France.webp" alt="drapeau français" class="pays" id="france">
-                    <img src="Image-brief-3/UK.webp" alt="drapeau du Royaume-Uni" class="pays" id="uk">
-                    <img src="Image-brief-3/Spain.webp" alt="drapeau espagnol" class="pays" id="spain">
+                    <img src="Image-brief-3/France.webp" alt="drapeau français" class="pays">
+                    <img src="Image-brief-3/UK.webp" alt="drapeau du Royaume-Uni" class="pays">
+                    <img src="Image-brief-3/Spain.webp" alt="drapeau espagnol" class="pays">
                 </div>
             </div>
             <div class="column">
                 <h2>Contacts</h2>
-                <div id="contact">
+                <div id="icone">
                     <a href="tel:+33686812301"><i class="fa-sharp fa-solid fa-phone fa-2xl" style="color: #4193a6;"></i></a>
                     <a href="mailto:gr.dev.web@gmail.com" target="_blank"><i class="fa-regular fa-envelope fa-2xl" style="color: #4193a6;"></i></a>
-                    <a href="www.linkedin.com/in/geoffrey-regnier" target="_blank"><i class="fa-brands fa-linkedin-in fa-2xl"style="color: #4193a6;"></i></a>
+                    <a href="https://www.linkedin.com/in/geoffrey-regnier" target="_blank"><i class="fa-brands fa-linkedin-in fa-2xl"style="color: #4193a6;"></i></a>
                     <a href="https://github.com/Geoffrey-Regnier" target="_blank"><i class="fa-brands fa-square-github fa-2xl"style="color: #4193a6;"></i></a>
                 </div>
             </div>
-            <div class="column">
+            <div class="column" id="passion">
                 <h2>Centres d'intérêts</h2>
                 <div id="interet">
                     <img src="Image-brief-3/lens.webp" alt="Blason club de foot Racing Club de Lens" class="hobby">
                     <img src="Image-brief-3/HOI4.jpg" alt="Illustration du jeu Europa Universalis IV" class="hobby">
                     <img src="Image-brief-3/Napoleon.webp" alt="Napoleon au grand Saint Bernard" class="hobby">
+                    <img src="Image-brief-3/chuck.webp" alt="photo de chuck Noriss" class="hobby">
                 </div>
             </div>
         </div>
         <div id="pro">
-            <div class="column boite marginbottom">
+            <div class="column boite" id="competence">
                 <h3>Compétences</h3>
                 <div class="row">  
                     <div id="hardskills">
@@ -87,46 +88,46 @@
                     </div>
                 </div> 
             </div>
-            <div class="column boite margintopbottom">
+            <div class="column boite" id="formations">
                 <h3>Formations</h3>
                 <div class="column">
-                    <p class="blanc">2023-Aujourd'hui Développeur Intégrateur d’Applications Web, Lille</p>
-                    <p class="blanc">2013-2014 Licence Profesionnelle Banque et Assurance, Lille</p>
-                    <p class="blanc">2011-2012 DUETI, échange universitaire, BC, Canada</p>
-                    <p class="blanc">2009-2011 DUT Techniques de Commercialisation, Auxerre</p>
+                    <p class="blanc blanc2">2023-Aujourd'hui Développeur Intégrateur d’Applications Web, Lille</p>
+                    <p class="blanc blanc2">2013-2014 Licence Profesionnelle Banque et Assurance, Lille</p>
+                    <p class="blanc blanc2">2011-2012 DUETI, échange universitaire, BC, Canada</p>
+                    <p class="blanc blanc2">2009-2011 DUT Techniques de Commercialisation, Auxerre</p>
                 </div>
             </div>
-            <div class="column boite margintop">
+            <div class="column boite">
                 <h3>Expériences</h3>
                 <div class="column">
-                    <h4>2022-2023 Banque Populaire, Conseiller B to C en agence</h4>
-                    <p class="blanc">Gestion d'un portefeuille de 700 clients particulier, chargé d'entretenir, développer et fidéliserce portefeuille.</p>
-                    <p class="blanc">Gestion des risques crédits et sécurité</p>
-                    <p class="blanc">Mise en place de dossier de crédits immobiliers et consommation</p>
-                    <p class="blanc">Commercilisation de service d'assurance des biens et des personnes</p>
-                    <p class="blanc">Gestion des réclamations</p>
-                    <p class="blanc">Suivi des demandes auprès des services internes</p>
-                    <p class="blanc">Initiation au digital pour les clients en fracture numérique</p>
+                    <h5>2022-2023 Banque Populaire, Conseiller B to C en agence</h5>
+                    <p class="blanc blanc2">Gestion d'un portefeuille de 700 clients particulier, chargé d'entretenir, développer et fidéliser ce portefeuille.</p>
+                    <p class="blanc blanc2">Gestion des risques crédits et sécurité</p>
+                    <p class="blanc blanc2">Mise en place de dossier de crédits immobiliers et consommation</p>
+                    <p class="blanc blanc2">Commercilisation de service d'assurance des biens et des personnes</p>
+                    <p class="blanc blanc2">Gestion des réclamations</p>
+                    <p class="blanc blanc2">Suivi des demandes auprès des services internes</p>
+                    <p class="blanc blanc2">Initiation au digital pour les clients en fracture numérique</p>
                 </div>
                 <div class="column">
-                    <h4>2019-2021 Booking.com, Guest Customer Specialist en Call Center<h4>
-                    <p class="blanc fontsizebooking">Gestion des appels entrants des utilisateurs des services de Booking.com</p>
-                    <p class="blanc fontsizebooking">Chargé de gérer les demandes de modifications, annulations ou autres demandes dans le respect à lafois des clients mais égalements des partenaires (Etablissements)</p>
-                    <p class="blanc fontsizebooking">Gestion des réclamations clients ou partenaires, chargé de trouver une solution satisfaisantes pourles deux camps.</p>
-                    <p class="blanc fontsizebooking">Mise en place d'animation de réunion d'équipe, team building, jeux de cohésion.</p>
-                    <p class="blanc fontsizebooking">Utilisation de l'anglais pour toutes les communications entre agents afin de faciliter la transmission d'informations.</p>
+                    <h5>2019-2021 Booking.com, Guest Customer Specialist en Call Center<h5>
+                    <p class="blanc blanc2">Gestion des appels entrants des utilisateurs des services de Booking.com</p>
+                    <p class="blanc blanc2">Chargé de gérer les demandes de modifications, annulations ou autres demandes dans le respect à lafois des clients mais égalements des partenaires (Etablissements)</p>
+                    <p class="blanc blanc2">Gestion des réclamations clients ou partenaires, chargé de trouver une solution satisfaisantes pourles deux camps.</p>
+                    <p class="blanc blanc2">Mise en place d'animation de réunion d'équipe, team building, jeux de cohésion.</p>
+                    <p class="blanc blanc2">Utilisation de l'anglais pour toutes les communications entre agents afin de faciliter la transmission d'informations.</p>
                 </div>
                 <div class="column">
-                    <h4>2015-2019 Société Générale, Conseiller B to C en Call Center</h4>
-                    <p class="blanc">Gestion des appels des clients redirigés vers le centre de relation client ou l'ayant contacté directement.</p>
-                    <p class="blanc">Mise en application des campagnes d'appels sortants crées par l'entreprise</p>
-                    <p class="blanc"> Gestion des risques crédits et sécurité</p>
-                    <p class="blanc">Mise en place de dossier de crédits consommation</p>
-                    <p class="blanc">Commercilisation de service d'assurance des biens et des personnes</p>
-                    <p class="blanc">Gestion des réclamations</p>
-                    <p class="blanc">Initiation au digital pour les clients en fracture numérique</p>
-                    <p class="blanc">Parrainage et formation des nouveaux arrivants</p>
-                    <p class="blanc">Animation des réunions d'équipe, annonce des résultats, team building</p>
+                    <h5>2015-2019 Société Générale, Conseiller B to C en Call Center</h5>
+                    <p class="blanc blanc2">Gestion des appels des clients redirigés vers le centre de relation client ou l'ayant contacté directement.</p>
+                    <p class="blanc blanc2">Mise en application des campagnes d'appels sortants crées par l'entreprise</p>
+                    <p class="blanc blanc2"> Gestion des risques crédits et sécurité</p>
+                    <p class="blanc blanc2">Mise en place de dossier de crédits consommation</p>
+                    <p class="blanc blanc2">Commercilisation de service d'assurance des biens et des personnes</p>
+                    <p class="blanc blanc2">Gestion des réclamations</p>
+                    <p class="blanc blanc2">Initiation au digital pour les clients en fracture numérique</p>
+                    <p class="blanc blanc2">Parrainage et formation des nouveaux arrivants</p>
+                    <p class="blanc blanc2">Animation des réunions d'équipe, annonce des résultats, team building</p>
                 </div>
             </div>
         </div>
